# RulpexStore

./: .gitignore  README.md  pyproject.toml
backend/: __init__.py  __main__.py  constants.py  helpers.py  models.py  money.py  server.py  views.py
frontend/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ProjetoRulpex.csproj  ProjetoRulpex.sln
frontend/Controls/: ItemDisplay.xaml  ItemDisplay.xaml.cs
frontend/Helpers/: BaseValueConverter.cs  PageConverter.cs
frontend/Pages/: Cadastro.xaml  Cadastro.xaml.cs  Catalogo.xaml  Catalogo.xaml.cs  Login.xaml  Login.xaml.cs
frontend/ViewModels/: CadastroViewModel.cs  CatalogoViewModel.cs  ItemDisplayViewModel.cs  LoginViewModel.cs
frontend/ViewModels/Base/: BaseViewModel.cs  RelayCommand.cs  RelayParametrizedCommand.cs
tests_backend/: test_encryption.py
