[tool.poetry]
name = "rulpex_store_backend"
version = "0.1.0"
description = "A backend store prototype"
authors = ["Victor Marcelino <victor.fmarcelino@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
flask-restful = "^0.3.7"
flask-sqlalchemy = "^2.4"
travel-backpack = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
